Modified container of nav

--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header class="navbar navbar-expand-lg  py-3 px-5 border-bottom">
-        <div class="container-fluid">
+        <div class="container-fluid container">
             <a class="logo navbar-brand d-flex align-items-center">
                 <img src="./img/logo.png" alt="edificapro logo" class="logo__img d-block align-text-center me-3">
                 Edifica<span>Pro</span>
