--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 
-    <header class="navbar navbar-expand-lg  py-3 px-5 border-bottom">
+    <header class="navbar navbar-expand-lg  py-3 px-5 border-bottom header__nav">
         <div class="container-fluid container">
-            <a class="logo navbar-brand d-flex align-items-center">
+            <a class="logo navbar-brand d-flex align-items-center" href="#">
                 <img src="./img/logo.png" alt="edificapro logo" class="logo__img d-block align-text-center me-3">
                 Edifica<span>Pro</span>
             </a>
@@ -66,7 +66,35 @@
                 </div>
             </div>
 
-            
+            <div class="hero__cards card-group w-100 justify-content-center">
+                <div class="card">
+                    <div class="card-img-top">
+                        <i class="fa-solid fa-user-group"></i>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">10k +</h5>
+                        <p class="card-text">Clientes</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-top">
+                        <i class="fa-solid fa-briefcase"></i>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">1k +</h5>
+                        <p class="card-text">Proyectos</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-top">
+                        <i class="fa-solid fa-award"></i>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">50 +</h5>
+                        <p class="card-text">Años de Experiencia</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     
