Complete projects section

--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -25,8 +25,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#home">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Opiniones</a></li>
                 </ul>
             </nav>
@@ -127,6 +127,8 @@
                             <p>Nuestros equipos se caracterizan por su compromiso, profesionalismo y espíritu colaborativo, lo que nos permite ofrecer proyectos de alta calidad que cumplen con los más altos estándares de la industria</p>
                         </div>
                     </div>
+
+                    <button class="btn btn-light mt-4">Leer más</button>
                 </div>
     
                 <div class="about__images">
@@ -156,6 +158,52 @@
 
                 </div>
             </div>
+        </section>
+
+        <section class="container projects" id="projects">
+            <h2 class="section__title">Últimos Proyectos</h2>
+
+            <div class="projects__main d-flex flex-column gap-5">
+                <div class="projects__card">
+                    <div class="projects__img">
+                        <img src="./img/residencia-sol.jpg" alt="residencia Sol realizada por EdificaPro" class="img-fluid">
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__title">Residencia Sol</h3>
+                        <p class="projects__text">Exclusiva residencia de lujo ubicada en un entorno natural impresionante. Diseñada con elegancia y estilo moderno, Residencia Sol ofrece amplios espacios interiores, ventanas panorámicas y acabados de alta gama. Con su diseño armonioso y atención meticulosa a los detalles, esta residencia redefine el concepto de hogar de ensueño.</p>
+                        <button class="btn btn-light">Leer más</button>
+                    </div>
+                </div>
+                <div class="projects__card">
+                    <div class="projects__img">
+                        <img src="./img/centro-comercial.jpg" alt="centro comercial realizado por EdificaPro" class="img-fluid">
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__title">Centro Comercial Épsilon</h3>
+                        <p class="projects__text">Centro comercial vanguardista que combina comercio, entretenimiento y gastronomía. Épsilon cuenta con una arquitectura innovadora y espacios comerciales de primer nivel, brindando una experiencia de compra única. Con una amplia selección de tiendas, restaurantes y áreas de ocio, este centro comercial se convierte en el destino ideal para toda la familia.</p>
+                        <button class="btn btn-light">Leer más</button>
+                    </div>
+                </div>
+                <div class="projects__card">
+                    <div class="projects__img">
+                        <img src="./img/complejo-res.jpg" alt="complejo residencial realizado por EdificaPro" class="img-fluid">
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__title">Complejo Residencial Mariposa</h3>
+                        <p class="projects__text">complejo residencial exclusivo ubicado frente al mar, donde la elegancia se encuentra con la comodidad. Mariposa ofrece apartamentos de lujo con impresionantes vistas al océano, amplias áreas comunes, piscina infinita y acceso directo a la playa. Este complejo combina el lujo costero con una atmósfera tranquila y relajante para una vida sofisticada junto al mar.</p>
+                        <button class="btn btn-light">Leer más</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container services" id="services">
+            <h2 class="section__title">Nuestros Servicios</h2>
+
+
         </section>
     </main>
     
