Complete opinions card section

--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Proyectos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Opiniones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#opinions">Opiniones</a></li>
                 </ul>
             </nav>
 
@@ -203,7 +203,140 @@
         <section class="container services" id="services">
             <h2 class="section__title">Nuestros Servicios</h2>
 
+            <div class="services__main ">
+                <div class="services__card row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 g-lg-5">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-img-top">
+                                <i class="fa-solid fa-gear"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Construcción</h5>
+                                <p class="card-text">Creando espacios duraderos y funcionales que superan las expectativas.</p>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-img-top">
+                                <i class="fa-solid fa-palette"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño</h5>
+                                <p class="card-text">Transformando ideas en diseños innovadores y estéticamente atractivos</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-img-top">
+                                <i class="fa-solid fa-screwdriver-wrench"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Mantenimiento</h5>
+                                <p class="card-text">Cuidando y preservando tus proyectos con servicios de mantenimiento integral</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-img-top">
+                                <i class="fa-solid fa-rocket"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Renovación</h5>
+                                <p class="card-text">Renovando espacios existentes para darles una nueva vida y funcionalidad</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-img-top">
+                                <i class="fa-solid fa-house-circle-check"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Calidad</h5>
+                                <p class="card-text">Comprometidos con la excelencia en cada etapa del proceso de construcción</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-img-top">
+                                <i class="fa-solid fa-lock"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Seguridad</h5>
+                                <p class="card-text">Priorizando la seguridad de nuestros trabajadores y clientes en todo momento</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container opinions" id="opinions">
+            <h2 class="section__title">Opiniones</h2>
+
+            <div class="opinions__main">
+                <div class="opinions__card row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+                    <div class="col">
+                        <div class="card review-card">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Laura González
+                                    <span class="stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                </h5>
+                                <p class="card-text">“EdificaPro transformó mi hogar con una renovación excepcional. Profesionalismo impecable, atención a los detalles y acabados de calidad que superaron mis expectativas. ¡Los recomendaría sin dudarlo!”</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card review-card">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Roberto Fernández
+                                    <span class="stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                </h5>
+                                <p class="card-text">“EdificaPro construyó mi casa con dedicación y experiencia. Cumplieron plazos, calidad y crearon el hogar de mis sueños. ¡Los elegiría nuevamente en un abrir y cerrar de ojos!”</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card review-card">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Ana Martínez
+                                    <span class="stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                </h5>
+                                <p class="card-text">“EdificaPro diseñó mi local comercial con creatividad y atención personalizada. El proceso fue emocionante y el resultado final superó mis expectativas. ¡Ahora tengo un espacio atractivo y funcional!”</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     
