Complete opinions section

--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -336,6 +336,8 @@
                         </div>
                     </div>
                 </div>
+
+                <button class="btn btn-light mt-5">ver más</button>
             </div>
         </section>
     </main>
