Complete contact section

--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -340,6 +340,53 @@
                 <button class="btn btn-light mt-5">ver más</button>
             </div>
         </section>
+
+        <section class="container contact" id="contact">
+            <h2 class="section__title">Contáctanos</h2>
+
+            <div class="contact__main row row-cols-1 row-cols-lg-2 g-5">
+                <form class="col">
+                    <div class="mb-3 row row-cols-1 row-cols-md-2 g-3">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Nombre">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Teléfono">
+                        </div>
+                    </div>
+                    <div class="mb-3 row row-cols-1 row-cols-md-2 g-3">
+                        <div class="col">
+                            <input type="email" class="form-control" placeholder="Correo">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Concepto">
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" placeholder="Mensaje"></textarea>
+                    </div>
+                </form>
+
+                <div class="location col d-flex flex-column justify-content-around">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2953.858177984412!2d-8.72639348696954!3d42.23884277108436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2f63e961b93af5%3A0x94f4a9b0226640ca!2sDinoseto!5e0!3m2!1ses!2ses!4v1685694050083!5m2!1ses!2ses" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    <div class="location__links row row-cols-1 row-cols-md-2 g-2">
+                        <div class="location__link col d-flex align-items-center gap-2">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>Praza de Compostela, 36201 Vigo</p>
+                        </div>
+                        <div class="location__link col d-flex align-items-center gap-2">
+                            <i class="fa-solid fa-envelope"></i>
+                            <p>contacto@edificapro.com</p>
+                        </div>
+                        <div class="location__link col d-flex align-items-center gap-2">
+                            <i class="fa-solid fa-phone"></i>
+                            <p>+34 66778899</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <script src="./script.js"></script>
