complete media queries

--- a/edificapro/index.html
+++ b/edificapro/index.html
@@ -100,7 +100,7 @@
         <section class="container about" id="about">
             <h2 class="section__title">Sobre Nosotros</h2>
 
-            <div class="about__main d-flex  align-items-top">
+            <div class="about__main d-flex  align-items-top flex-wrap">
                 <div class="about__content">
                     <div class="about__titles">
                         <button class="about__btn active" id="historyBtn">historia</button>
@@ -193,7 +193,7 @@
 
                     <div class="projects__content">
                         <h3 class="projects__title">Complejo Residencial Mariposa</h3>
-                        <p class="projects__text">complejo residencial exclusivo ubicado frente al mar, donde la elegancia se encuentra con la comodidad. Mariposa ofrece apartamentos de lujo con impresionantes vistas al océano, amplias áreas comunes, piscina infinita y acceso directo a la playa. Este complejo combina el lujo costero con una atmósfera tranquila y relajante para una vida sofisticada junto al mar.</p>
+                        <p class="projects__text">Complejo residencial exclusivo ubicado frente al mar, donde la elegancia se encuentra con la comodidad. Mariposa ofrece apartamentos de lujo con impresionantes vistas al océano, amplias áreas comunes, piscina infinita y acceso directo a la playa. Este complejo combina el lujo costero con una atmósfera tranquila y relajante para una vida sofisticada junto al mar.</p>
                         <button class="btn btn-light">Leer más</button>
                     </div>
                 </div>
@@ -365,6 +365,7 @@
                     <div class="mb-3">
                         <textarea class="form-control" placeholder="Mensaje"></textarea>
                     </div>
+                    <button class="btn btn-dark">Enviar</button>
                 </form>
 
                 <div class="location col d-flex flex-column justify-content-around">
