--- a/undersound/index.html
+++ b/undersound/index.html
@@ -16,8 +16,8 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container container-fluid">
-                <a href="#" class="navbar-brand">
-                    <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="40px">
+                <a href="#" class="navbar-brand d-flex align-items-center gap-3">
+                    <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
                     UnderSound
                 </a>
                 <div class="collapse navbar-collapse">
