add button hero

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -45,7 +45,15 @@
                 <h1 class="hero-title">El Mejor Lugar Para Descubrir la <span>Vanguardia</span> Musical.</h1>
                 <p class="hero-text">Explora nuevos géneros, descubre artistas emergentes y sumérgete en una experiencia auditiva auténtica. Con nuestra plataforma de streaming, podrás disfrutar de un mundo de sonidos alternativos y vibrantes que desafían los límites musicales convencionales. 
                 ¡Sintoniza con la revolución sonora de UnderSound y déjate llevar por la pasión de la música underground!</p>
+
+                <div class="hero-btns">
+                    <a href="#" class="btn btn-purple">Comenzar prueba</a>
+                </div>
+                <div class="hero-users">
+
+                </div>
             </div>
+
         </section>
     </header>
 </body>
