--- a/undersound/index.html
+++ b/undersound/index.html
@@ -10,6 +10,9 @@
     <!-- -bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -46,8 +49,12 @@
                 <p class="hero-text">Explora nuevos géneros, descubre artistas emergentes y sumérgete en una experiencia auditiva auténtica. Con nuestra plataforma de streaming, podrás disfrutar de un mundo de sonidos alternativos y vibrantes que desafían los límites musicales convencionales. 
                 ¡Sintoniza con la revolución sonora de UnderSound y déjate llevar por la pasión de la música underground!</p>
 
-                <div class="hero-btns">
+                <div class="hero-btns d-flex align-items-center gap-5">
                     <a href="#" class="btn btn-purple">Comenzar prueba</a>
+                    <a href="#" class="btn-see ">
+                        <i class="fa-regular fa-circle-play"></i>
+                        Ver plataforma
+                    </a>
                 </div>
                 <div class="hero-users">
 
