Complete hero section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -49,15 +49,30 @@
                 <p class="hero-text">Explora nuevos géneros, descubre artistas emergentes y sumérgete en una experiencia auditiva auténtica. Con nuestra plataforma de streaming, podrás disfrutar de un mundo de sonidos alternativos y vibrantes que desafían los límites musicales convencionales. 
                 ¡Sintoniza con la revolución sonora de UnderSound y déjate llevar por la pasión de la música underground!</p>
 
-                <div class="hero-btns d-flex align-items-center gap-5">
+                <div class="hero-btns d-flex align-items-center">
                     <a href="#" class="btn btn-purple">Comenzar prueba</a>
-                    <a href="#" class="btn-see ">
+                    <a href="#" class="btn-see d-flex align-items-center gap-2">
                         <i class="fa-regular fa-circle-play"></i>
                         Ver plataforma
                     </a>
                 </div>
-                <div class="hero-users">
+                <div class="hero-users d-flex align-items-center gap-5 py-4">
+                    <div class="hero-users__img d-flex align-items-center">
+                        <figure>
+                            <img class="img-fluid" src="./img/user1.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img class="img-fluid" src="./img/user2.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img class="img-fluid" src="./img/user3.jpg" alt="">
+                        </figure>
+                    </div>
 
+                    <div class="hero-users__content">
+                        <p class="fw-bold">10M +</p>
+                        <p>Usuarios en todo el mundo</p>
+                    </div>
                 </div>
             </div>
 
