Complete hover effects on hero

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -19,9 +19,9 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container container-fluid">
-                <a href="#" class="navbar-brand d-flex align-items-center gap-3">
+                <a href="#" class="navbar-brand">
                     <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
-                    UnderSound
+                    <p>UnderSound</p>
                 </a>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
@@ -36,12 +36,8 @@
 
         <section class="hero container">
             <div class="hero-img">
-                <div class="hero-img__container">
-                    <!-- <img src="./img/bg-blue.svg" alt=""> -->
-                </div>
-                <div class="hero-img__container">
-
-                </div>
+                <div class="hero-img__container"></div>
+                <div class="hero-img__container"></div>
             </div>
             <div class="hero-content d-flex flex-column gap-3">
                 <h3 class="hero-subtitle">Descubre Nuevos Sonidos</h3>
