Start of info section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -74,5 +74,18 @@
 
         </section>
     </header>
+
+    <main>
+        <section class="info">
+            <div class="container text-center">
+                <h2 class="info-title section-title">Descubre, Aprende y <span>Disfruta</span></h2>
+                <p class="info-text">En UnderSound, creemos que la música es mucho más que solo entretenimiento. Es una fuente de aprendizaje, inspiración y conexión. Explora nuevos géneros, sumérgete en melodías introspectivas y rompe barreras con sonidos alternativos. Únete a nosotros, regístrate ahora y desata tu pasión por la música underground.</p>
+                <a class="btn">Regístrate!</a>
+                <div class="info-cards">
+                    
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
