Add card section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -42,6 +42,7 @@
             <div class="hero-content d-flex flex-column gap-3">
                 <h3 class="hero-subtitle">Descubre Nuevos Sonidos</h3>
                 <h1 class="hero-title">El Mejor Lugar Para Descubrir la <span>Vanguardia</span> Musical.</h1>
+                <img src="./img/line.svg" alt="" class="hero-line">
                 <p class="hero-text">Explora nuevos géneros, descubre artistas emergentes y sumérgete en una experiencia auditiva auténtica. Con nuestra plataforma de streaming, podrás disfrutar de un mundo de sonidos alternativos y vibrantes que desafían los límites musicales convencionales. 
                 ¡Sintoniza con la revolución sonora de UnderSound y déjate llevar por la pasión de la música underground!</p>
 
@@ -81,8 +82,34 @@
                 <h2 class="info-title section-title">Descubre, Aprende y <span>Disfruta</span></h2>
                 <p class="info-text">En UnderSound, creemos que la música es mucho más que solo entretenimiento. Es una fuente de aprendizaje, inspiración y conexión. Explora nuevos géneros, sumérgete en melodías introspectivas y rompe barreras con sonidos alternativos. Únete a nosotros, regístrate ahora y desata tu pasión por la música underground.</p>
                 <a class="btn">Regístrate!</a>
-                <div class="info-cards">
-                    
+                <div class="info-card__container d-flex align-items-center py-5 my-5 gap-5">
+                    <div class="info-card">
+                        <img src="./img/learn-card1.png" alt="" class="info-card__img">
+                        <h3 class="info-card__title">Ritmos étnicos del mundo</h3>
+                        <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad del sonido global</p>
+                        <a href="#" class="btn btn-card">
+                            <i class="fa-regular fa-circle-play"></i>
+                            Escuchar
+                        </a>
+                    </div>
+                    <div class="info-card">
+                        <img src="./img/learn-card2.png" alt="" class="info-card__img">
+                        <h3 class="info-card__title">Melodías introspectivas</h3>
+                        <p class="info-card__text">Deja que la música te guíe hacia nuevos horizontes de inspiración</p>
+                        <a href="#" class="btn btn-card">
+                            <i class="fa-regular fa-circle-play"></i>
+                            Escuchar
+                        </a>
+                    </div>
+                    <div class="info-card">
+                        <img src="./img/learn-card3.png" alt="" class="info-card__img">
+                        <h3 class="info-card__title">Rompiendo barreras</h3>
+                        <p class="info-card__text">Expande tus horizontes musicales y déjate cautivar por la diversidad del sonido global</p>
+                        <a href="#" class="btn btn-card">
+                            <i class="fa-regular fa-circle-play"></i>
+                            Escuchar
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
