Complete features section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -81,8 +81,8 @@
             <div class="container text-center">
                 <h2 class="info-title section-title">Descubre, Aprende y <span>Disfruta</span></h2>
                 <p class="info-text">En UnderSound, creemos que la música es mucho más que solo entretenimiento. Es una fuente de aprendizaje, inspiración y conexión. Explora nuevos géneros, sumérgete en melodías introspectivas y rompe barreras con sonidos alternativos. Únete a nosotros, regístrate ahora y desata tu pasión por la música underground.</p>
-                <a class="btn">Regístrate!</a>
-                <div class="info-card__container d-flex align-items-center py-5 my-5 gap-5">
+                <a class="btn mb-5">Regístrate!</a>
+                <div class="info-card__container d-flex align-items-center gap-5">
                     <div class="info-card">
                         <img src="./img/learn-card1.png" alt="" class="info-card__img">
                         <h3 class="info-card__title">Ritmos étnicos del mundo</h3>
@@ -110,6 +110,40 @@
                             Escuchar
                         </a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="container d-flex align-items-end">
+                <div class="features-content d-flex flex-column gap-3">
+                    <h2 class="features-title section-title mb-4">¿Qué nos hace <span>únicos</span>?</h2>
+                    <p class="features-text">¡Aquí tienes 4 ventajas que te harán entender por qué somos únicos!</p>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            Diversidad musical sin límites
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            Conviértete en tu propio DJ
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            Experiencia personalizada
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            Apoyo a la comunidad de artistas
+                        </li>
+                    </ul>
+
+                    <a href="#" class="btn">Saber más</a>
+                </div>
+                <div class="features-img">
+                    <img src="./img/title-svg-sound-wave.png" alt="" class="features-img__wave">
+                    <img src="./img/features-user.png" alt="" class="features-img__girl">
+                    <img src="./img/feature-media.jpg" alt="" class="features-img__media">
                 </div>
             </div>
         </section>
