Complete share section

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -147,6 +147,37 @@
                 </div>
             </div>
         </section>
+
+        <section class="share">
+            <img src="./img/micro.png" alt="" class="share-bg">
+            <div class="container text-center d-flex flex-column align-items-center gap-5">
+                <h2 class="section-title share-title">Comparte <span>tu música</span> con el mundo</h2>
+                <p class="share-text">UnderSound te brinda la oportunidad de compartir tu música original con una audiencia global. Sube tus creaciones y permite que otros disfruten de tu talento y creatividad. Únete a nuestra comunidad musical y haz que tu música resuene en todo el mundo.</p>
+                <div class="share-card__container d-flex align-items-center gap-5">
+                    <div class="share-card d-flex flex-column align-items-center gap-2">
+                        <i class="fa-solid fa-microphone share-card__icon"></i>
+                        <h3 class="share-card__title">Captura tus melodías</h3>
+                        <p class="share-card__text">Graba tus composiciones en alta calidad.</p>
+                    </div>
+                    <div class="share-card d-flex flex-column align-items-center gap-2">
+                        <i class="fa-solid share-card__icon fa-gear"></i>
+                        <h3 class="share-card__title">Ajusta y mejora</h3>
+                        <p class="share-card__text">Edita y mejora el sonido de tus pistas.</p>
+                    </div>
+                    <div class="share-card d-flex flex-column align-items-center gap-2">
+                        <i class="fa-solid share-card__icon fa-arrow-up-from-bracket"></i>
+                        <h3 class="share-card__title">Comparte tus creaciones</h3>
+                        <p class="share-card__text">Sube tus archivos de música a UnderSound.</p>
+                    </div>
+                    <div class="share-card d-flex flex-column align-items-center gap-2">
+                        <i class="fa-solid share-card__icon fa-crown"></i>
+                        <h3 class="share-card__title">Destaca como premium</h3>
+                        <p class="share-card__text">Accede a funciones avanzadas para promocionar tu música.</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
