Categories hero section complete

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -178,6 +178,25 @@
                 </div>
             </div>
         </section>
+
+        <section class="cat">
+            <div class="container">
+                <div class="cat-hero d-flex gap-5">
+                    <div class="cat-hero__content">
+                        <h2 class="section-title cat-title mb-5">Explora nuestras <span>Categorías Musicales</span></h2>
+                        <p class="cat-text">UnderSound ofrece una amplia variedad de categorías musicales para satisfacer todos los gustos. Descubre nuevos estilos y géneros en nuestra plataforma.</p>
+                    </div>
+                    <div class="cat-hero__options d-flex gap-5 align-items-start justify-content-center">
+                        <a href="#" class="btn">Todas</a>
+                        <a href="#" class="btn btn-option">Pop</a>
+                        <a href="#" class="btn btn-option">Rock</a>
+                        <a href="#" class="btn btn-option">Electrónica</a>
+                        <a href="#" class="btn btn-option">Hip-hop</a>
+                        <a href="#" class="btn btn-option">Jazz</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
